...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".JobSearchParameterActivity">

    <LinearLayout
        android:id="@+id/job_search_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Back Button -->
...
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_margin="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Search Job"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:paddingBottom="10dp"
            android:layout_gravity="center_horizontal" />

...
            android:layout_height="wrap_content"
            android:text="Job Title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginStart="13dp"/>

        <EditText
            android:id="@+id/jobTitle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:hint="Enter Job Title"
            android:inputType="text"
            android:width="300dp"
            android:layout_marginStart="13dp"/>
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                <EditText
                    android:id="@+id/minSalary"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:hint="Min Salary"
                    android:inputType="number"
                    android:width="100dp"/>

                <EditText
                    android:id="@+id/maxSalary"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:hint="Max Salary"
                    android:inputType="number"
                    android:width="100dp"/>
                </LinearLayout>
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Duration"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:hint="Enter Duration"
                    android:inputType="text"
                    android:width="150dp"/>
            </LinearLayout>
...
            android:layout_height="wrap_content"
            android:text="Location"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginStart="13dp"/>

        <EditText
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:hint="Enter Preferred location"
            android:inputType="text"
            android:width="300dp"
            android:layout_marginStart="13dp"/>
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/search_job_parameter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="50dp"
                android:text="Search"
                app:layout_constraintBottom_toBottomOf="parent"
...
